--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body>
+    <div class="contenedor-logo">
+    <img src="img/Logo-ricodi.jpeg" alt="Logo-ricodi" class="logo-rebote">
+    </div>
     <h1>Feliz Día del Niño</h1>
     <img src= "https://m.media-amazon.com/images/I/71LINV6ruJL._AC_UF894,1000_QL80_.jpg" width="400px" alt="Imagen del Día del niño">
     <p>Gracias por ser un bebe maravilloso. 
