--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
     <div class="contenedor-logo">
-    <img src="img/Logo-ricodi.jpeg" alt="Logo-ricodi" class="logo-rebote">
+    <a href="https://www.youtube.com/@icaito-ricodi-resica" target="_blank" title="Canal de Youtube">
+      <img src="img/Logo-ricodi.jpeg" alt="Logo-icaito" class="logo-rebote">
+    </a>
     </div>
     <h1>Feliz Día del Niño</h1>
     <img src= "https://m.media-amazon.com/images/I/71LINV6ruJL._AC_UF894,1000_QL80_.jpg" width="400px" alt="Imagen del Día del niño">
